Styled new list input

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,6 +24,15 @@ button:active,
   color: #150722;
 }
 
+input {
+  width: 100%;
+  font: inherit;
+  padding: 0.15rem 0.25rem;
+  border-radius: 4px;
+  border: 1px solid #ab9ac0;
+  background-color: #d0c2e1;
+}
+
 #addButton {
   color: black;
   background-color: #c3b3d1;
